--- a/config/default/core.entity_form_display.node.heritage_item.default.yml
+++ b/config/default/core.entity_form_display.node.heritage_item.default.yml
@@ -35,6 +35,7 @@ dependencies:
     - field.field.node.heritage_item.field_geofield
     - field.field.node.heritage_item.field_geolocation
     - field.field.node.heritage_item.field_gks_id
+    - field.field.node.heritage_item.field_gks_reference_number
     - field.field.node.heritage_item.field_identifier_url
     - field.field.node.heritage_item.field_image2
     - field.field.node.heritage_item.field_imagemy_media
@@ -464,7 +465,7 @@ content:
     third_party_settings: {  }
   field_geolocation:
     type: geolocation_leaflet
-    weight: 25
+    weight: 24
     region: content
     settings:
       auto_client_location: ''
@@ -1045,7 +1046,7 @@ content:
         maxlength_js_enforce: true
   field_image2:
     type: image_image
-    weight: 22
+    weight: 21
     region: content
     settings:
       progress_indicator: throbber
@@ -1095,7 +1096,7 @@ content:
     third_party_settings: {  }
   field_media_audio_video_docs_:
     type: media_library_widget
-    weight: 23
+    weight: 22
     region: content
     settings:
       media_types: {  }
@@ -1156,7 +1157,7 @@ content:
     third_party_settings: {  }
   field_region_origin_attribution:
     type: text_textarea
-    weight: 24
+    weight: 23
     region: content
     settings:
       rows: 5
@@ -1248,7 +1249,7 @@ content:
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 21
+    weight: 20
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -1259,7 +1260,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   scheduler_settings:
-    weight: 20
+    weight: 19
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -1313,6 +1314,7 @@ hidden:
   body: true
   field_geofield: true
   field_gks_id: true
+  field_gks_reference_number: true
   field_imagemy_media: true
   field_media_image_twoc: true
   field_region_of_origin: true
