--- a/config/default/user.role.seo_admin.yml
+++ b/config/default/user.role.seo_admin.yml
@@ -33,11 +33,11 @@ dependencies:
     - contextual
     - dropzonejs
     - entity_browser
+    - field_permissions
     - file
     - filter
     - google_analytics
     - google_analytics_reports
-    - google_tag
     - layout_builder
     - media
     - media_bulk_upload
@@ -186,6 +186,7 @@ permissions:
   - 'view any webform submission'
   - 'view article revisions'
   - 'view content planner dashboard'
+  - 'view field_gks_reference_number'
   - 'view heritage_item revisions'
   - 'view landing_page_lb revisions'
   - 'view language_item revisions'
