--- a/config/default/user.role.site_admin.yml
+++ b/config/default/user.role.site_admin.yml
@@ -68,7 +68,6 @@ dependencies:
     - google_analytics
     - google_analytics_reports
     - google_analytics_reports_api
-    - google_tag
     - layout_builder
     - locale
     - mailsystem
@@ -488,6 +487,7 @@ permissions:
   - 'view faq revisions'
   - 'view field_bulk_import_key'
   - 'view field_gks_id'
+  - 'view field_gks_reference_number'
   - 'view field_record_editable_by'
   - 'view heritage_item revisions'
   - 'view landing_page_lb revisions'
