--- a/config/default/user.role.test_role.yml
+++ b/config/default/user.role.test_role.yml
@@ -227,6 +227,7 @@ permissions:
   - 'view article revisions'
   - 'view field_bulk_import_key'
   - 'view field_gks_id'
+  - 'view field_gks_reference_number'
   - 'view field_record_editable_by'
   - 'view heritage_item revisions'
   - 'view icons'
