--- a/config/default/views.view.front_geolocation.yml
+++ b/config/default/views.view.front_geolocation.yml
@@ -216,9 +216,59 @@ display:
           plugin_id: bundle
           value:
             heritage_item: heritage_item
+          group: 1
           expose:
             operator_limit_selection: false
             operator_list: {  }
+        field_geolocation_lat:
+          id: field_geolocation_lat
+          table: node__field_geolocation
+          field: field_geolocation_lat
+          relationship: none
+          group_type: group
+          admin_label: ''
+          entity_type: node
+          plugin_id: numeric
+          operator: 'not empty'
+          value:
+            min: ''
+            max: ''
+            value: ''
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            min_placeholder: ''
+            max_placeholder: ''
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
       style:
         type: maps_common
         options:
